# odyssey

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  style  tidy
imgui/: version
include/: odyssey.h  odyssey_camera.h  odyssey_device.h  odyssey_engine.h  odyssey_gui.h  odyssey_header.h  odyssey_model.h  odyssey_object.h  odyssey_pipeline.h  odyssey_render.h  odyssey_render_system.h  odyssey_swap_chain.h  odyssey_window.h  odyssey_window_render.h
include/event/: odyssey_keyboard_event.h  odyssey_mouse_controller.h  odyssey_mouse_event.h
include/ui/: odyssey_side_menu.h
resource/: odyssey.qrc  odyssey.rc
resource/ui/: odyssey.ui  odyssey_side_bar.qml
shaders/: blue.vert  blue.vert.spv  shader.frag  shader.vert
src/: main.cpp  odyssey.cpp  odyssey_camera.cpp  odyssey_device.cpp  odyssey_engine.cpp  odyssey_gui.cpp  odyssey_model.cpp  odyssey_object.cpp  odyssey_pipeline.cpp  odyssey_render.cpp  odyssey_render_system.cpp  odyssey_swap_chain.cpp  odyssey_window.cpp  odyssey_window_render.cpp
src/ui/: odyssey_side_menu.cpp
ui/: Odyssey.qml  odyssey.ui  odyssey_side_menu.ui
